[package]
name = "ordin"
version = "0.1.0"
edition = "2021"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/TobiasDeBruijn/Ordin.git"

[dependencies]
toml = "0.5.8"
actix-web = "3.3.3"
log = "0.4.14"
env_logger = "0.9.0"
thiserror = "1.0.30"
structopt = "0.3.26"
serde_yaml = "0.8.23"
time = "0.3.7"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]